--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@200;300;400;500;600;700&family=Fraunces:opsz,wght@9..144,600&family=Manrope&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Chivo:wght@200;300;400;500;600;700&family=Fraunces:opsz,wght@9..144,600&family=Manrope:wght@400;500;600;700&display=swap');
 
 :root {
     --dark-purple: hsl(273, 85%, 13%);
     --bright-green: hsl(150, 100%, 63%);
     --greyish: hsl(271, 12%, 34%);
-    --light-purple: hsl(276, 100, 99);
+    --light-purple: hsl(276, 100%, 98%);
 }
 
 html {
@@ -15,6 +15,7 @@ html {
 *::before,
 *::after {
     box-sizing: inherit;
+    font-family: 'Manrope', sans-serif;
 }
 
 body,
@@ -32,10 +33,6 @@ li {
     padding: 0;
 }
 
-body {
-    font-family: 'Manrope', sans-serif;
-}
-
 h1,
 h2,
 h3,
@@ -46,10 +43,56 @@ h6 {
 }
 
 header {
-    height: 300px;
     background-color: var(--dark-purple);
     color: white;
     position: relative;
+    height: 400px;
+    background-image: url("../img/bg-pattern-3.svg"), url("../img/bg-pattern-2.svg");
+    background-repeat: no-repeat;
+    background-position: -7% 45%, 103% 100%;
+}
+
+nav ul {
+    list-style: none;
+    padding-top: 2rem;
+    display: flex;
+    justify-content: space-around;
+}
+
+.hero-content {
+    margin: 3rem auto 2rem auto;
+}
+
+.hero-content h1 {
+    width: 12ch;
+    font-size: 5rem;
+    line-height: 0.8em;
+    text-align: center;
+    margin: auto auto 1.75rem auto;
+}
+
+.hero-content button {
+    display: block;
+    border-radius: 0;
+    padding: 0.75rem 1.25rem;
+    border: 2px solid var(--bright-green);
+    color: var(--dark-purple);
+    background-color: var(--bright-green);
+    font-weight: bold;
+    margin: auto;
+    transition: background-color 0.2s ease-in;
+}
+
+.hero-content button:hover {
+    color: var(--bright-green);
+    background-color: var(--dark-purple);
+}
+
+img[alt="phone"] {
+    display: block;
+    margin: auto;
+    position: relative;
+    z-index: 1;
 }
 
 .hero-wave {
@@ -59,6 +102,7 @@ header {
     width: 100%;
     overflow: hidden;
     line-height: 0;
+    background-color: var(--light-purple);
 }
 
 .hero-wave svg {
@@ -70,4 +114,36 @@ header {
 
 .hero-wave .shape-fill {
     fill: var(--dark-purple);
+}
+
+main {
+    position: relative;
+    top: 200px;
+    background-color: var(--light-purple);
+}
+
+@media only screen and (max-width: 855px) {
+
+    img[alt="phone"] {
+        width: 514px;
+    }
+
+    .hero-content h1 {
+        font-size: 3.5rem;
+        line-height: 0.8em;
+    }
+
+    header {
+        background-image: url("../img/bg-pattern-3.svg"), url("../img/bg-pattern-2.svg");
+        background-repeat: no-repeat;
+        background-position: -12% 45%, 108% 100%;
+    }
+}
+@media only screen and (max-width: 710px) {
+    
+    header {
+        background-image: url("../img/bg-pattern-3.svg"), url("../img/bg-pattern-2.svg");
+        background-repeat: no-repeat;
+        background-position: -7% 45%, 103% 100%;
+    }
 }
