--- a/styles/styles.css
+++ b/styles/styles.css
@@ -4,7 +4,7 @@
     --dark-purple: hsl(273, 85%, 13%);
     --bright-green: hsl(150, 100%, 63%);
     --greyish: hsl(271, 12%, 34%);
-    --light-purple: hsl(276, 100%, 98%);
+    --light-purple: hsl(276, 100%, 95%);
 }
 
 html {
@@ -40,6 +40,10 @@ h4,
 h5,
 h6 {
     font-family: 'Fraunces', serif;
+}
+
+body {
+    background-color: var(--light-purple);
 }
 
 header {
@@ -118,8 +122,48 @@ img[alt="phone"] {
 
 main {
     position: relative;
-    top: 200px;
+    top: 354px;
     background-color: var(--light-purple);
+}
+
+section.info-section {
+    position: relative;
+}
+
+.info-section .hero-wave {
+    background-color: white;
+}
+
+.info-section .hero-wave .shape-fill {
+    fill: var(--light-purple);
+}
+
+.info-list {
+    width: 90%;
+    max-width: 1115px;
+    margin: auto;
+    list-style: none;
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem;
+}
+
+.numeric-label>span {
+    border: 1px solid var(--dark-purple);
+    padding: 2px 8px;
+    border-radius: 100%;
+}
+
+.info-card {
+    display: grid;
+    grid-template-rows: 0.5fr auto 1fr;
+    row-gap: 0.5rem;
+    text-align: center;
+}
+
+.creator-section {
+    position: relative;
+    top: 175px;
 }
 
 @media only screen and (max-width: 855px) {
@@ -130,7 +174,6 @@ main {
 
     .hero-content h1 {
         font-size: 3.5rem;
-        line-height: 0.8em;
     }
 
     header {
@@ -138,12 +181,82 @@ main {
         background-repeat: no-repeat;
         background-position: -12% 45%, 108% 100%;
     }
+
+    body {
+        background-color: white;
+    }
+
+    main {
+        top: 234px;
+    }
 }
-@media only screen and (max-width: 710px) {
-    
+
+@media only screen and (max-width: 768px) {
+    .info-list {
+        grid-template-columns: auto;
+        row-gap: 1.5rem;
+    }
+
+    .info-card {
+        grid-template-rows: auto;
+        grid-template-areas:
+            "label heading"
+            "label info";
+        column-gap: 2rem;
+        text-align: left;
+    }
+
+    .info-card>.numeric-label {
+        grid-area: label;
+        align-self: center;
+    }
+
+    .info-card>h2 {
+        grid-area: heading;
+    }
+
+    .info-card>.card-info {
+        grid-area: info;
+    }
+}
+
+@media only screen and (max-width: 700px) {
     header {
-        background-image: url("../img/bg-pattern-3.svg"), url("../img/bg-pattern-2.svg");
-        background-repeat: no-repeat;
-        background-position: -7% 45%, 103% 100%;
+        background-image: none;
+    }
+}
+
+@media only screen and (max-width: 530px) {
+
+    header {
+        height: 250px;
+    }
+
+    .hero-content h1 {
+        font-size: 2rem;
+    }
+
+    img[alt="phone"] {
+        width: 320px;
+    }
+}
+
+@media only screen and (max-width: 400px) {
+    .info-list {
+        grid-template-columns: auto;
+        column-gap: 1rem;
+    }
+
+    .info-card {
+        grid-template-areas: initial;
+        grid-template-columns: auto;
+        grid-template-rows: auto;
+    }
+
+    .info-card>.numeric-label,
+    .info-card>h2,
+    .info-card>.card-info {
+        text-align: center;
+        grid-area: initial;
     }
 }
