--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,10 +1,14 @@
 @import url('https://fonts.googleapis.com/css2?family=Chivo:wght@200;300;400;500;600;700&family=Fraunces:opsz,wght@9..144,600&family=Manrope:wght@400;500;600;700&display=swap');
 
+* {
+    /* outline: 1px solid red; */
+}
+
 :root {
     --dark-purple: hsl(273, 85%, 13%);
     --bright-green: hsl(150, 100%, 63%);
     --greyish: hsl(271, 12%, 34%);
-    --light-purple: hsl(276, 100%, 95%);
+    --light-purple: hsl(276, 100%, 99%);
 }
 
 html {
@@ -123,11 +127,12 @@ img[alt="phone"] {
 main {
     position: relative;
     top: 354px;
-    background-color: var(--light-purple);
+    background-color: white;
 }
 
 section.info-section {
     position: relative;
+    background-color: var(--light-purple);
 }
 
 .info-section .hero-wave {
@@ -163,7 +168,63 @@ section.info-section {
 
 .creator-section {
     position: relative;
-    top: 175px;
+    top: 237px;
+    width: 90%;
+    max-width: 1115px;
+    margin: auto;
+}
+
+
+.creator-section {
+    display: grid;
+}
+
+img[alt="founder"] {
+    justify-self: left;
+    width: 45%;
+    aspect-ratio: 1;
+}
+
+.creator-content {
+    position: relative;
+    top: -300px;
+    width: 65%;
+    min-height: 350px;
+    justify-self: right;
+    background-color: var(--dark-purple);
+    padding: 3rem;
+    background-image: url("../img/bg-pattern-3.svg");
+    background-position: 90% 390%;
+    background-repeat: no-repeat;
+    color: white;
+    display: grid;
+    row-gap: 1.5rem;
+
+    @media only screen and (max-width: 1050px) {
+        top: -125px;
+        min-height: initial;
+        height: auto;
+    }
+}
+
+.creator-content button {
+    border-radius: 0;
+    padding: 0.75rem 1.25rem;
+    border: 2px solid var(--bright-green);
+    color: var(--dark-purple);
+    background-color: var(--bright-green);
+    font-weight: bold;
+    transition: background-color 0.2s ease-in;
+    justify-self: left;
+
+    @media only screen and (max-width: 600px) {
+        justify-self: center;
+    }
+}
+
+.creator-content button:hover {
+    color: var(--bright-green);
+    background-color: var(--dark-purple);
 }
 
 @media only screen and (max-width: 855px) {
@@ -189,6 +250,11 @@ section.info-section {
     main {
         top: 234px;
     }
+
+    .creator-content {
+        background-position: 90% 350%;
+    }
+
 }
 
 @media only screen and (max-width: 768px) {
@@ -218,10 +284,34 @@ section.info-section {
     .info-card>.card-info {
         grid-area: info;
     }
+
+    img[alt="founder"] {
+        width: 35%;
+    }
+
+    .creator-content {
+        top: -85px;
+        padding: 1.5rem;
+        width: 80%;
+    }
 }
 
 @media only screen and (max-width: 700px) {
     header {
+        background-image: none;
+    }
+}
+
+@media only screen and (max-width: 600px) {
+    img[alt="founder"] {
+        width: 85%;
+        justify-self: center;
+    }
+
+    .creator-content {
+        justify-self: center;
+        width: 100%;
+        top: -50px;
         background-image: none;
     }
 }
